--- a/sass/app/css/free/hotel/template2/modules/_details.scss
+++ b/sass/app/css/free/hotel/template2/modules/_details.scss
@@ -145,13 +145,20 @@
                 .tf-features-block-wrapper {
                     display: grid;
                     gap: 24px;
-                    grid-template-columns: 1fr 1fr 1fr 1fr;
+                    grid-template-columns: repeat(auto-fit, minmax(23%, 1fr));
                     margin-bottom: 32px;
+                    
+                    @media #{$max1600}{
+                        grid-template-columns: repeat(auto-fit, minmax(23%, 1fr));
+                    }
                     @media #{$max1200}{
-                        grid-template-columns: 1fr 1fr 1fr;
+                        grid-template-columns: 1fr 1fr;
                     }
                     @media #{$max991}{
                         grid-template-columns: 1fr 1fr;
+                    }
+                    @media #{$max480}{
+                        grid-template-columns: 100%;
                     }
                     .tf-feature-block {
                         padding: 24px;
